# CatLocator

./: .gitignore  LICENSE  README.md  build.sh  project-prd.md
CatLocator_iOS/: README.md
CatLocator_iOS/CatLocator_iOS/: AppSettingsStore.swift  CatLocator_iOSApp.swift  ContentView.swift  MQTTManager.swift  Persistence.swift  SettingsView.swift
CatLocator_iOS/CatLocator_iOS.xcodeproj/: project.pbxproj
CatLocator_iOS/CatLocator_iOSTests/: CatLocator_iOSTests.swift
CatLocator_iOS/CatLocator_iOSUITests/: CatLocator_iOSUITests.swift  CatLocator_iOSUITestsLaunchTests.swift
esp32-beacon/: .gitignore  CMakeLists.txt  README.md  esp-idf  esp_idf_project_configuration.json  sdkconfig.defaults
esp32-beacon/include/: beacon_control.h  ble_scan.h  catlocator_payload.hpp  config_portal.h  device_info.h  lora_bridge.h  mdns_discovery.h  mqtt_service.h  netmgr.h  serial_cli.h  time_sync.h
esp32-beacon/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  idf_component.yml
esp32-beacon/main/ble_scan/: ble_scan.c  ble_scan.c.bak
esp32-beacon/main/config_portal/: config_portal.c
esp32-beacon/main/control/: beacon_control.c
esp32-beacon/main/device_info/: device_info.c
esp32-beacon/main/lora_bridge/: lora_bridge.c
esp32-beacon/main/mdns_discovery/: mdns_discovery.c
esp32-beacon/main/mqtt_service/: mqtt_service.c
esp32-beacon/main/netmgr/: netmgr.c
esp32-beacon/main/serial_cli/: serial_cli.c
esp32-beacon/main/time_sync/: time_sync.c
go-mqtt-server/: .gitignore  README.md  build.sh  go.mod
ml-training/: README.md  train.py
(+13 files in other folders)
